Put JitPackUtil back the way upstream writes it
d87b15f replaced the URL constructors with URI in three files to quiet
the deprecation warnings a Java 20+ compiler reports. Two of those are
ours to edit: Downloader.java is jkite's own, and Util.java is a shim,
where keeping upstream's API while changing the implementation is the
whole point. The third, JitPackUtil.java, is mirrored - line 16 of
misc/upstream-mirror.txt - and a mirrored file is copied from JBang
byte for byte and edited nowhere else. misc/sync-upstream.sh would have
overwritten the change at the next sync and the warnings would have
come back, with nothing to say they had ever gone.

So that file goes back to what it was, and it is byte for byte the
upstream file at ea1c3dda, the revision misc/upstream-ref.txt records -
checked against the copy on github rather than against our own history.
The deprecation warnings in it are upstream's, and the build asks for
--release 11, where they do not appear at all.

The change itself is worth having. It belongs in a pull request to
JBang, which is what CONTRIBUTING.md says to do with a fix in a
mirrored file: it survives the next sync there, and everyone gets it.
Whether to send it is a decision for later; nothing is lost by
leaving it, since at --release 11 there is nothing to see.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01R3xSSwJLoriFc3sgc2RgkR